homelab/frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: frigate
spec:
  selector:
    app: frigate
  ports:
    - name: http
      port: 80
      targetPort: 8971
    - name: rtsp
      port: 8554
      targetPort: 8554
